--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@types/ccapture.js": "^1.1.0",
+    "@types/p5": "^0.9.1",
+    "ccapture.js": "^1.1.0",
+    "fs": "0.0.1-security",
     "gatsby": "^2.24.63",
+    "gatsby-image": "^2.4.19",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "p5": "^1.1.9",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-script-tag": "^1.1.2"
   },
   "devDependencies": {
     "prettier": "2.1.1"
