--- a/package.json
+++ b/package.json
@@ -15,20 +15,35 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
+    "@loadable/component": "^5.13.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/ccapture.js": "^1.1.0",
+    "@types/downloadjs": "^1.4.2",
+    "@types/ffmpeg.js": "^3.1.1",
     "@types/p5": "^0.9.1",
+    "@types/react-color": "^3.0.4",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-numeric-input": "^2.2.3",
     "ccapture.js": "^1.1.0",
+    "downloadjs": "^1.4.7",
+    "ffmpeg.js": "^4.2.9003",
     "fs": "0.0.1-security",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-query-params": "^1.2.1",
+    "load-script": "^1.0.0",
     "p5": "^1.1.9",
     "react": "^16.12.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.12.0",
-    "react-script-tag": "^1.1.2"
+    "react-helmet": "^6.1.0",
+    "react-numeric-input": "^2.2.3",
+    "react-script-tag": "^1.1.2",
+    "web-audio-beat-detector": "^8.0.28"
   },
   "devDependencies": {
     "prettier": "2.1.1"
