--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cross-blob": "^2.0.0",
     "downloadjs": "^1.4.7",
     "ffmpeg.js": "^4.2.9003",
+    "fft-js": "^0.0.12",
     "fs": "0.0.1-security",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
