--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "ffmpeg.js": "^4.2.9003",
     "fft-js": "^0.0.12",
     "fs": "0.0.1-security",
-    "gatsby": "^2.24.63",
-    "gatsby-image": "^2.4.19",
+    "gatsby": "^4.2.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-query-params": "^1.2.1",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-query-params": "^1.3.0",
     "load-script": "^1.0.0",
     "low-pass-filter": "^1.0.0",
     "p5": "^1.1.9",
