--- a/package.json
+++ b/package.json
@@ -15,46 +15,48 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
-    "@emotion/react": "^11.6.0",
     "@loadable/component": "^5.13.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui/lab": "^5.0.0-alpha.70",
+    "@mui/material": "^5.4.3",
     "@types/ccapture.js": "^1.1.0",
     "@types/downloadjs": "^1.4.2",
     "@types/ffmpeg.js": "^3.1.1",
-    "@types/p5": "^0.9.1",
+    "@types/p5": "^1.4.0",
     "@types/react-color": "^3.0.4",
     "@types/react-helmet": "^6.1.0",
     "@types/react-numeric-input": "^2.2.3",
     "ccapture.js": "^1.1.0",
-    "cross-blob": "^2.0.0",
+    "cross-blob": "^3.0.1",
     "downloadjs": "^1.4.7",
     "ffmpeg.js": "^4.2.9003",
     "fft-js": "^0.0.12",
     "fs": "0.0.1-security",
-    "gatsby": "^4.2.0",
+    "gatsby": "^4.8.1",
+    "gatsby-plugin-emotion": "^7.8.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-query-params": "^1.3.0",
-    "load-script": "^1.0.0",
+    "load-script": "^2.0.0",
     "low-pass-filter": "^1.0.0",
     "p5": "^1.1.9",
-    "react": "^16.12.0",
+    "react": "^17.0.2",
     "react-color": "^2.18.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-numeric-input": "^2.2.3",
     "react-script-tag": "^1.1.2",
     "signaljs": "^1.0.1",
-    "three": "^0.121.1",
+    "three": "^0.138.0",
     "tone": "^14.7.58",
     "web-audio-beat-detector": "^8.0.28"
   },
   "devDependencies": {
-    "prettier": "2.1.1"
+    "prettier": "^2.5.1"
   },
   "repository": {
     "type": "git",
