--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "heroku-postbuild": "gatsby build"
   },
   "dependencies": {
+    "@emotion/styled": "^11.9.3",
     "@loadable/component": "^5.13.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -40,7 +41,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
-    "gatsby-query-params": "^1.3.0",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "load-script": "^2.0.0",
     "low-pass-filter": "^1.0.0",
     "p5": "^1.1.9",
@@ -49,10 +50,10 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-numeric-input": "^2.2.3",
-    "react-script-tag": "^1.1.2",
     "signaljs": "^1.0.1",
     "three": "^0.138.0",
     "tone": "^14.7.58",
+    "use-query-params": "^1.2.3",
     "web-audio-beat-detector": "^8.0.28"
   },
   "devDependencies": {
