--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
-  "engines" : {
+  "engines": {
     "node": "16.x"
   },
   "scripts": {
@@ -56,6 +56,7 @@
     "signaljs": "^1.0.1",
     "three": "^0.138.0",
     "tone": "^14.7.58",
+    "type-fest": "^0.20.2",
     "use-query-params": "^1.2.3",
     "web-audio-beat-detector": "^8.0.28"
   },
