--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/downloadjs": "^1.4.2",
     "@types/ffmpeg.js": "^3.1.1",
     "@types/p5": "^1.4.0",
+    "@types/react": "^17.0.47",
     "@types/react-color": "^3.0.4",
     "@types/react-helmet": "^6.1.0",
     "@types/react-numeric-input": "^2.2.3",
