--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-color": "^3.0.4",
     "@types/react-helmet": "^6.1.0",
     "@types/react-numeric-input": "^2.2.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "ccapture.js": "^1.1.0",
     "cross-blob": "^3.0.1",
     "downloadjs": "^1.4.7",
@@ -45,6 +46,7 @@
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^5.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-plugin-styled-components": "^5.22.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "load-script": "^2.0.0",
     "low-pass-filter": "^1.0.0",
@@ -55,6 +57,7 @@
     "react-helmet": "^6.1.0",
     "react-numeric-input": "^2.2.3",
     "signaljs": "^1.0.1",
+    "styled-components": "^5.3.5",
     "three": "^0.138.0",
     "tone": "^14.7.58",
     "type-fest": "^0.20.2",
